Checked Xray chapter

--- a/Sections/00_Title.tex
+++ b/Sections/00_Title.tex
@@ -1,7 +1,7 @@
 \begin{titlepage}
 \includegraphics[scale=0.2]{logo/SOLEIL.png}
 \hspace{2.7cm}
-\includegraphics[scale=0.0472]{logo/CEA.png}
+\includegraphics[scale=0.0472]{logo/cea.jpg}
 \hspace{2.7cm}
 \includegraphics[scale=0.2]{logo/ParisSaclayPrune.jpg}
 
