--- a/Sections/00_Title_Saclay.tex
+++ b/Sections/00_Title_Saclay.tex
@@ -20,7 +20,7 @@
 \end{picture}
 
 \vspace{-12mm}
-\flushright \includegraphics[height=2.1cm]{logo/CEA.png} \hspace{7mm}
+\flushright \includegraphics[height=2.1cm]{logo/cea.jpg} \hspace{7mm}
 \includegraphics[height=2.1cm]{logo/SOLEIL.png}
 
 %*****************************************************
