--- a/main.tex
+++ b/main.tex
@@ -112,7 +112,7 @@
 \usepackage{tikz} % Drawing
 \usetikzlibrary{shapes.geometric, arrows, positioning, calc}
 \usepackage{colortbl} % Colour the lines in the tables
-\usepackage{minted} % Format code
+% \usepackage{minted} % Format code
 \usepackage[version=4]{mhchem}
 \usepackage{animate} % for animations in 3D
 
