--- a/references.bib
+++ b/references.bib
@@ -169,7 +169,6 @@ abstract = {The complex hexagonal reconstructions of the (001) surfaces of plati
 annote = {The latter has been realized already by Heinz et al. [70] who had shown that the main features of the diffraction pattern of the Pt(001)-hex can be explained by a simple double diffraction process occurring from a hexagonal surface layer and quadratic bulk layers.},
 author = {Hammer, R. and Meinel, K. and Krahn, O. and Widdra, W.},
 doi = {10.1103/PhysRevB.94.195406},
-file = {:home/david/Documents/PhD/Papers/AVlad/PhysRevB.94.195406_Surface reconstruction of Pt(001) quantitatively revisited.pdf:pdf},
 issn = {24699969},
 journal = {Physical Review B},
 number = {19},
@@ -806,7 +805,7 @@ year = {2004}
 abstract = {The open-source PyNX toolkit has been extended to provide tools for coherent X-ray imaging data analysis and simulation. All calculations can be executed on graphical processing units (GPUs) to achieve high-performance computing speeds. The toolkit can be used for coherent diffraction imaging (CDI), ptychography and wavefront propagation, in the far- or near-field regime. Moreover, all imaging operations (propagation, projections, algorithm cycles...) can be implemented in Python as simple mathematical operators, an approach which can be used to easily combine basic algorithms in a tailored chain. Calculations can also be distributed to multiple GPUs, e.g. for large ptychography data sets. Command-line scripts are available for on-line CDI and ptychography analysis, either from raw beamline data sets or using the coherent X-ray imaging data format.},
 archivePrefix = {arXiv},
 arxivId = {2008.11511},
-author = {Favre-Nicolin, Vincent and Girard, Ga{\'{e}}tan and Leake, Steven and Carnis, Jerome and Chushkin, Yuriy and Kieffer, Jerome and Paleo, Pierre and Richard, Marie Ingrid},
+author = {Favre-Nicolin, Vincent and Girard, Ga{\'{e}}tan and Leake, Steven and Carnis, Jérôme and Chushkin, Yuriy and Kieffer, Jérôme and Paleo, Pierre and Richard, Marie Ingrid},
 doi = {10.1107/S1600576720010985},
 eprint = {2008.11511},
 file = {:home/david/Documents/PhD/Papers/S1600576720010985.pdf:pdf},
@@ -1575,13 +1574,7 @@ publisher = {Springer US},
 title = {{Broadband coherent diffractive imaging}},
 year = {2020}
 }
-@article{Simonne2021,
-author = {Simonne, David},
-file = {:home/david/.local/share/data/Mendeley Ltd./Mendeley Desktop/Downloaded/Report - 2021 - SIXS Beamtime January - Experimental Re- port Synchrotron SOLEIL CEA Grenoble.pdf:pdf},
-keywords = {bcdi,catalysis,nox,pt nanoparticles,rga,sixs},
-title = {{SIXS Beamtime January - Experimental Report Synchrotron SOLEIL CEA Grenoble}},
-year = {2021}
-}
+
 @article{Richter2019,
 abstract = {The ID01 beamline has been built to combine Bragg diffraction with imaging techniques to produce a strain and mosaicity microscope for materials in their native or operando state. A scanning probe with nano-focused beams, objective-lens-based full-field microscopy and coherent diffraction imaging provide a suite of tools which deliver micrometre to few nanometre spatial resolution combined with 10−5 strain and 10−3 tilt sensitivity. A detailed description of the beamline from source to sample is provided and serves as a reference for the user community. The anticipated impact of the impending upgrade to the ESRF – Extremely Brilliant Source is also discussed.},
 author = {Richter, Carsten and Hilhorst, Jan and Petit, Lucien and Richard, Marie-ingrid and Morawe, Christian and Barrett, Raymond and Zhang, Lin and Homs-regojo, Roberto A},
@@ -2193,7 +2186,7 @@ year = {2017}
 }
 @article{Carnis2021,
 abstract = {Mesocrystals are nanostructured materials consisting of individual nanocrystals having a preferred crystallographic orientation. On mesoscopic length scales, the properties of mesocrystals are strongly affected by structural heterogeneity. Here, we report the detailed structural characterization of a faceted mesocrystal grain self-assembled from 60 nm sized gold nanocubes. Using coherent X-ray diffraction imaging, we determined the structure of the mesocrystal with the resolution sufficient to resolve each gold nanoparticle. The reconstructed electron density of the gold mesocrystal reveals its intrinsic structural heterogeneity, including local deviations of lattice parameters, and the presence of internal defects. The strain distribution shows that the average superlattice obtained by angular X-ray cross-correlation analysis and the real, "multidomain"structure of a mesocrystal are very close to each other, with a deviation less than 10\%. These results will provide an important impact to understanding the fundamental principles of structuring and self-assembly including ensuing properties of mesocrystals.},
-author = {Carnis, Jerome and Kirner, Felizitas and Lapkin, Dmitry and Sturm, Sebastian and Kim, Young Yong and Baburin, Igor A. and Khubbutdinov, Ruslan and Ignatenko, Alexandr and Iashina, Ekaterina and Mistonov, Alexander and Steegemans, Tristan and Wieck, Thomas and Gemming, Thomas and Lubk, Axel and Lazarev, Sergey and Sprung, Michael and Vartanyants, Ivan A. and Sturm, Elena V.},
+author = {Carnis, Jérôme and Kirner, Felizitas and Lapkin, Dmitry and Sturm, Sebastian and Kim, Young Yong and Baburin, Igor A. and Khubbutdinov, Ruslan and Ignatenko, Alexandr and Iashina, Ekaterina and Mistonov, Alexander and Steegemans, Tristan and Wieck, Thomas and Gemming, Thomas and Lubk, Axel and Lazarev, Sergey and Sprung, Michael and Vartanyants, Ivan A. and Sturm, Elena V.},
 doi = {10.1039/d1nr01806j},
 file = {:home/david/.local/share/data/Mendeley Ltd./Mendeley Desktop/Downloaded/Carnis et al. - 2021 - Exploring the 3D structure and defects of a self-assembled gold mesocrystal by coherent X-ray diffraction imaging.pdf:pdf},
 issn = {20403372},
@@ -2626,7 +2619,7 @@ year = {2017}
 }
 @article{Kim2018,
 abstract = {High catalytic efficiency in metal nanocatalysts is attributed to large surface area to volume ratios and an abundance of under-coordinated atoms that can decrease kinetic barriers. Although overall shape or size changes of nanocatalysts have been observed as a result of catalytic processes, structural changes at low-coordination sites such as edges, remain poorly understood. Here, we report high-lattice distortion at edges of Pt nanocrystals during heterogeneous catalytic methane oxidation based on in situ 3D Bragg coherent X-ray diffraction imaging. We directly observe contraction at edges owing to adsorption of oxygen. This strain increases during methane oxidation and it returns to the original state after completing the reaction process. The results are in good agreement with finite element models that incorporate forces, as determined by reactive molecular dynamics simulations. Reaction mechanisms obtained from in situ strain imaging thus provide important insights for improving catalysts and designing future nanostructured catalytic materials.},
-author = {Kim, Dongjin and Chung, Myungwoo and Carnis, Jerome and Kim, Sungwon and Yun, Kyuseok and Kang, Jinback and Cha, Wonsuk and Cherukara, Mathew J. and Maxey, Evan and Harder, Ross and Sasikumar, Kiran and {K. R. S. Sankaranarayanan}, Subramanian and Zozulya, Alexey and Sprung, Michael and Riu, Dohhyung and Kim, Hyunjung},
+author = {Kim, Dongjin and Chung, Myungwoo and Carnis, Jérôme and Kim, Sungwon and Yun, Kyuseok and Kang, Jinback and Cha, Wonsuk and Cherukara, Mathew J. and Maxey, Evan and Harder, Ross and Sasikumar, Kiran and {K. R. S. Sankaranarayanan}, Subramanian and Zozulya, Alexey and Sprung, Michael and Riu, Dohhyung and Kim, Hyunjung},
 doi = {10.1038/s41467-018-05464-2},
 file = {:home/david/Documents/PhD/Papers/Kim et al. - 2018 - Active site localization of methane oxidation on P.pdf:pdf},
 isbn = {4146701805},
@@ -2656,7 +2649,7 @@ volume = {11},
 year = {2020}
 }
 @article{Kim2021,
-author = {Kim, Young Yong and Keller, Thomas F and Goncalves, Tiago J and Abuin, Manuel and Runge, Henning and Gelisio, Luca and Carnis, Jerome and Vonk, Vedran and Plessow, Philipp N and Vartaniants, Ivan A and Stierle, Andreas},
+author = {Kim, Young Yong and Keller, Thomas F and Goncalves, Tiago J and Abuin, Manuel and Runge, Henning and Gelisio, Luca and Carnis, Jérôme and Vonk, Vedran and Plessow, Philipp N and Vartaniants, Ivan A and Stierle, Andreas},
 file = {:home/david/Documents/PhD/Papers/sciadv.abh0757.pdf:pdf},
 number = {111},
 pages = {1--9},
@@ -5991,7 +5984,7 @@ eprint = {https://royalsocietypublishing.org/doi/pdf/10.1098/rspa.1925.0061}
 
 
 @article{pynx2020operators,
-author = "Favre-Nicolin, Vincent and Girard, Ga{\'{e}}tan and Leake, Steven and Carnis, Jerome and Chushkin, Yuriy and Kieffer, Jerome and Paleo, Pierre and Richard, Marie-Ingrid",
+author = "Favre-Nicolin, Vincent and Girard, Ga{\'{e}}tan and Leake, Steven and Carnis, Jérôme and Chushkin, Yuriy and Kieffer, Jérôme and Paleo, Pierre and Richard, Marie-Ingrid",
 title = "{{\it PyNX}: high-performance computing toolkit for coherent X-ray imaging based on operators}",
 journal = "Journal of Applied Crystallography",
 year = "2020",
@@ -6862,7 +6855,7 @@ year = {2001}
    language = {en},
    urldate = {2018-07-04},
    journal = {Scientific Reports},
-   author = {Carnis, Jerome and Cha, Wonsuk and Wingert, James and Kang, Jinback and Jiang, Zhang and Song, Sanghoon and Sikorski, Marcin and Robert, Aymeric and Gutt, Christian and Chen, San-Wen and Dai, Yeling and Ma, Yicong and Guo, Hongyu and Lurio, Laurence B. and Shpyrko, Oleg and Narayanan, Suresh and Cui, Mengmeng and Kosif, Irem and Emrick, Todd and Russell, Thomas P. and Lee, Hae Cheol and Yu, Chung-Jong and Grübel, Gerhard and Sinha, Sunil K. and Kim, Hyunjung},
+   author = {Carnis, Jérôme and Cha, Wonsuk and Wingert, James and Kang, Jinback and Jiang, Zhang and Song, Sanghoon and Sikorski, Marcin and Robert, Aymeric and Gutt, Christian and Chen, San-Wen and Dai, Yeling and Ma, Yicong and Guo, Hongyu and Lurio, Laurence B. and Shpyrko, Oleg and Narayanan, Suresh and Cui, Mengmeng and Kosif, Irem and Emrick, Todd and Russell, Thomas P. and Lee, Hae Cheol and Yu, Chung-Jong and Grübel, Gerhard and Sinha, Sunil K. and Kim, Hyunjung},
    month = 08,
    year = {2014},
    pages = {6017},
@@ -6944,10 +6937,38 @@ DOI = {10.3390/cryst11030312}
    year = {2021},
 }
 
+@article{Simonne2022,
+author = "Simonne, David and Carnis, J{\'{e}}r{\^{o}}me and Atlan, Cl{\'{e}}ment and Chatelier, Corentin and Favre-Nicolin, Vincent and Dupraz, Maxime and Leake, Steven J. and Zatterin, Edoardo and Resta, Andrea and Coati, Alessandro and Richard, Marie-Ingrid",
+title = "{{\it Gwaihir}: {\it Jupyter Notebook} graphical user interface for Bragg coherent diffraction imaging}",
+journal = "Journal of Applied Crystallography",
+year = "2022",
+volume = "55",
+number = "4",
+pages = "1045--1054",
+month = 08,
+doi = {10.1107/S1600576722005854},
+url = {https://doi.org/10.1107/S1600576722005854},
+abstract = {Bragg coherent X-ray diffraction is a nondestructive method for probing material structure in three dimensions at the nanoscale, with unprecedented resolution in displacement and strain fields. This work presents {\it Gwaihir}, a user-friendly and open-source tool to process and analyze Bragg coherent X-ray diffraction data. It integrates the functionalities of the existing packages {\it bcdi} and {\it PyNX} in the same toolbox, creating a natural workflow and promoting data reproducibility. Its graphical interface, based on {\it Jupyter Notebook} widgets, combines an interactive approach for data analysis with a powerful environment designed to link large-scale facilities and scientists.},
+keywords = {X-ray diffraction, coherence, phase retrieval, Jupyter Notebook, graphical user interfaces},
+}
+
+@article{Doniach_1970,
+   doi = {10.1088/0022-3719/3/2/010},
+   year = {1970},
+   month = 02,
+   publisher = {},
+   volume = {3},
+   number = {2},
+   pages = {285},
+   author = {S Doniach and  M Sunjic},
+   title = {Many-electron singularity in X-ray photoemission and X-ray line spectra from metals},
+   journal = {Journal of Physics C: Solid State Physics},
+   abstract = {It is pointed out that the spectra of X-ray induced fast photoelectrons from metal should have a characteristic skew line shape resulting from Kondo-like many-electron interactions of the metallic conduction electrons with the accompanying deep hole in the final state. The same line shape should also occur for the discrete line spectra of X-rays emitted from metals. This mechanism could account for the well-known asymmetries observed for K alpha lines.}
+}
 
 
 @software{jerome_carnis_2021_5741935,
-  author       = {Jerome Carnis and
+  author       = {Jérôme Carnis and
                   Clément Atlan and
                   David Simonne and
                   Steven Leake and
@@ -7431,7 +7452,7 @@ year = {2019}
    number = {1},
    urldate = {2018-10-12},
    journal = {Nature Communications},
-   author = {Kim, Dongjin and Chung, Myungwoo and Carnis, Jerome and Kim, Sungwon and Yun, Kyuseok and Kang, Jinback and Cha, Wonsuk and Cherukara, Mathew J. and Maxey, Evan and Harder, Ross and Sasikumar, Kiran and Sankaranarayanan, Subramanian K. R. S. and Zozulya, Alexey and Sprung, Michael and Riu, Dohhyung and Kim, Hyunjung},
+   author = {Kim, Dongjin and Chung, Myungwoo and Carnis, Jérôme and Kim, Sungwon and Yun, Kyuseok and Kang, Jinback and Cha, Wonsuk and Cherukara, Mathew J. and Maxey, Evan and Harder, Ross and Sasikumar, Kiran and Sankaranarayanan, Subramanian K. R. S. and Zozulya, Alexey and Sprung, Michael and Riu, Dohhyung and Kim, Hyunjung},
    month = 08,
    year = {2018},
    pages = {3422},
@@ -7656,13 +7677,22 @@ year = {2000}
 
 @article{Simonne2020,
    author = {David Simonne and Andrea Martini and Matteo Signorile and Alessandro Piovano and Luca Braglia and Piero Torelli and Elisa Borfecchia and Gabrielle Ricchiardi},
-   isbn = {0000000206396},
    issue = {6},
    journal = {Journal of Synchrotron Radiation},
    keywords = {in situ measurements,nexafs,numbers,peak fitting,python,transfer of copyright received,using the doi,yet been assigned page,your article has not},
    title = {THORONDOR: software for fast treatment and analysis of low-energy XAS data},
    volume = {7},
    year = {2020},
+}
+
+@software{Simonne_Thorondor_2022_Diamond,
+author = {Simonne, David},
+doi = {https://doi.org/10.1107/S1600577520011388},
+month = 08,
+title = {Thorondor},
+url = {https://github.com/DSimonne/thorondor/tree/diamond},
+version = {0.4.0},
+year = {2022}
 }
 
 @article{Konnecke2015,
