--- a/Sections/2_Theory_Models/SXRD.tex
+++ b/Sections/2_Theory_Models/SXRD.tex
@@ -43,8 +43,7 @@ We have shown in sec. \ref{sec:LatticeFactor} that the Lattice factor is equival
 For infinitely large crystals, the lattice factor converges towards a three dimensional Dirac peak.
 When working with large single crystals for surface x-ray diffraction, the samples are considered to be infinitely large in the $\vec{a}, \vec{b}$ directions and \textit{semi-infinitely} large in the $\vec{c}$ direction, creating an infinitely large flat surface.
 In the real space, this can be mathematically described by the multiplication of the crystal lattice and a step-function as illustrated in fig. \ref{fig:CTRConvolution}.
-The convolution theorem states that the Fourier transform of the multiplication of two functions is the convolution of their Fourier transforms, the Fourier transform of the crystal lattice is the Lattice factor when the Fourier transform of the step function is the inverse function $\frac{1}{q_z}$ \parencite{Andrews1985, Robinson1986}.
-The direction of the crystal truncation rod is perpendicular to the truncated surface.
+The convolution theorem states that the Fourier transform of the multiplication of two functions is the convolution of their Fourier transforms, the Fourier transform of the crystal lattice is the Lattice factor when the Fourier transform of the step function is the inverse function $\frac{1}{q_z}$ \parencite{Andrews1985, Robinson1986}, which gives rise to a so called "rod" of intensity along the direction perpendicular to the truncated surface, a \textit{crystal truncation rod}.
 
 We define $A(\vec{q})$ as the scattering amplitude of an infinite 2D layer of atoms, the scattering amplitude for a semi infinite stack of those layers in the $\vec{c}$ direction can be written as (adapted from eq. \ref{eq:LatFactor}):
 
@@ -68,7 +67,7 @@ This expression is only valid to describe the shape of the CTR intensity within 
     \centering
     \includegraphics[width=\textwidth]{Figures/introduction/relax_rough_ctr.pdf}
     \caption{
-    Simulation of the intensity of a crystal truncation rod recorded perpendicular to [2, 0] node for a single crystal made out platinum, performed with ROD \parencite{Vlieg2000}.
+    Simulation of the intensity of a crystal truncation rod perpendicular to [2, 0] node for a single crystal made out platinum, performed with ROD \parencite{Vlieg2000}.
     (a) Evolution of the CTR intensity together with the roughness parameter $\beta$, the intensity between the Bragg peaks decreases with increasing roughness.
     (b) Evolution of the CTR intensity together with the displacement $\delta z$ of the last atomic layer perpendicular to the surface.
     The CTR shows a stronger asymmetry with high relaxations and the position of the minimum between Bragg peaks is shifted.
@@ -77,7 +76,7 @@ This expression is only valid to describe the shape of the CTR intensity within 
 \end{figure}
 
 The position in the reciprocal space that is exactly between Bragg peaks linked by the CTR is called the \textit{anti-Bragg}, where the signal scattered from the surface is maximum compared to the signal scattered from the bulk which interferes destructively.
-This region, in which the surface structural information in contained, is accurelately described using the kinematical diffraction theory in contrast with the Bragg peaks where multiple scattering cannot be ignored \parencite{Kaganer2007}, and can therefore be described with eq. \ref{eq:CTR2}.
+This region, in which the surface structural information in contained, is accurelately described using the kinematical diffraction theory and can therefore be described with eq. \ref{eq:CTR2}, in contrast with the Bragg peaks where multiple scattering cannot be ignored \parencite{Kaganer2007}.
 To be able to analyze CTRs, it is crucial to be able to obtain a good signal to noise ratio when measuring the anti-Bragg since the intensity difference with the Bragg peak can reach 8 orders of magnitude \parencite{Fadenberger2010InSO}.
 This can become difficult when the surface is roughened during the creation of surface layers (such as oxide growth), phase transitions, or due to the adsorption of molecules during catalysis (cite).
 
@@ -103,7 +102,7 @@ To resume, analysing the scattered signal as a function of $l$ (out-of-plane mea
     For simplicity, only part of the reciprocal lattice is represented.
     (a) In-plane measurement ([h, k, l] = [0, 1, 0]), the sample is rotated in-plane by an angle $\omega$.
     The detector must be at an in-plane angle $\gamma=2\omega$ to detect the scattered x-rays.
-    (b) Out-of-plane measurement for crystal truncation rods, the sample is rotated in-plane by an angle $\omega$ so that the (0, 1, L) CTR is measured \textit{while} keeping the incident angle equal to zero.
+    (b) Out-of-plane measurement for crystal truncation rods, the sample is rotated in-plane by an angle $\omega$ so that the (0, 1, L) CTR is measured \textit{while} keeping the incident angle at low values.
     Here the [0, 1, 1] node is on the Ewald sphere, both detector angles must be rotated to be have the detector in the direction of the scattered x-rays.
     Only the (0, 1, L) CTR is represented for simplicity.
     }
@@ -122,7 +121,7 @@ The Laue condition for a particular reflection is satisfied when the scattering 
     \includegraphics[width=0.8\textwidth]{Figures/sixs/diffractometer.png}
     \caption{
     2+3 diffractometer used at SixS. Figure adapted from \cite{Schleputz2011}.
-    The angle $\omega$ is always the in-plane rotation of the sample but if the out-of-plane angular rotation varies is performed with $\beta$ in the horizontal configuration, $\mu$ is used in the vertical configuration.
+    The angle $\omega$ is always the in-plane rotation of the samplethe out-of-plane angular rotation is performed with $\beta$ in the horizontal configuration, $\mu$ is used in the vertical configuration.
     Likewise, if $\gamma$ and $\delta$ are respectively the in-plane and out-of-plane detector angles in the horizontal configuration, they switch in the vertical configuration since the "plane" is defined as parallel the sample surface.
     The $u$ and $v$ angles are in reality pseudo-angles created by moving the position of the sample with the goniometer, they are usually used to correct a possible tilt of the sample so that its surface lies perfectly in the ($\vec{x}, \vec{y}$) plane.
     }
@@ -130,15 +129,15 @@ The Laue condition for a particular reflection is satisfied when the scattering 
 \end{figure}
 
 The Ewald sphere is represented in fig. \ref{fig:EwaldSphere} to highlight how the diffraction angles must be tuned to satisfy the Laue condition.
-Let us take the example of a diffractometer in a horizontal setup (fig. \ref{fig:Diffractometer}), $\omega$, and $\beta$ are respectively the in-plane and out-of-plane rotation angles of the sample when $\gamma$ and $\delta$ are the in-plane and out-of-plane rotation angles of the detector.
+Let us take the example of a diffractometer in a horizontal setup (fig. \ref{fig:Diffractometer}), $\omega$ and $\beta$ (rotation around $\vec{x}$ of the entire setup) are respectively the in-plane and out-of-plane rotation angles of the sample when $\gamma$ and $\delta$ are the in-plane and out-of-plane rotation angles of the detector.
 The rotation of the reciprocal space associated to the sample is achieved by rotating the sample to satisfy the Laue condition, the detection of the scattered x-rays by the detector is then attained by placing the detector in the direction of the scattering wavevector $\vec{k}_f$.
 
 For in-plane measurements, the Laue condition is fulfilled simply by rotating the sample with the in-plane angle $\omega$, the detector in-plane angle $\gamma$ must then be equal to $\gamma = 2 \omega$ to measure the scattered x-rays (fig. \ref{fig:EwaldSphere} - a).
 The incident angle between $\vec{k}_i$ and the sample must be kept to low values for reason that were explained earlier.
 In the case of out-of-plane measurements, this brings some important constraints about the experiment geometry.
-For example, the $[0, 0, L]$ crystal truncation rod becomes impossible to measure, for other rods (e.g. $[0, 1, L]$, fig. \ref{fig:EwaldSphere} - b), the sample must be rotated in plane so that the top of the Ewald sphere intersect the rod in the reciprocal space.
+For example, the $(0, 0, L)$ crystal truncation rod becomes impossible to measure, for other rods (e.g. $(0, 1, L)$, fig. \ref{fig:EwaldSphere} - b), the sample must be rotated in plane so that the top of the Ewald sphere intersect the rod in the reciprocal space.
 
-As one can imagine from fig. \ref{fig:EwaldSphere} - b, there is a maximum value $l_{max}$ that can be reached until the radius of the Ewald sphere becomes too low to ever intersect the rod in the reciprocal lattice, which depends on the incoming photon wavelength and on the crystal lattice.
+As one can imagine from fig. \ref{fig:EwaldSphere} - b, there is a maximum value $l_{max}$ that can be reached until the radius of the Ewald sphere becomes too low to ever intersect the rod in the reciprocal space, which depends on the incoming photon wavelength and on the crystal lattice.
 Furthermore, if for low $l$ values the detector is in the vertical plane, for high $l$ values the detector is almost parallel to the sample which limits the sampling of the reciprocal space.
 These experimental limitations are at the origin of how far in $l$ the CTR can be measured, details about the experimental limitations and corrections factor for the measurement of crystal truncation rods can be found in \cite{Vlieg1997, Drnec2014}.
 
@@ -163,3 +162,19 @@ Moreover, in the case of crystals that are larger than the beam, illumination ef
 
 To perform a measurement perpendicular to the $[0, 0]$ node, $\mu$ must be tuned together with the out-of-plane angle of the detector $\delta$ keeping the relation $\delta=2\mu$.
 This kind of measurement is called "specular" measurement for which the direction of the scattering vector is only perpendicular to the surface.
+
+\begin{figure}[!htb]
+    \centering
+    \includegraphics[trim=75 100 75 100, clip, width=0.49\textwidth]{Figures/introduction/EwaldSphereSpecular3D.pdf}
+    \caption{
+    Ewald sphere represented together with the reciprocal lattice before (green) and after (blue) rotating the sample to satify the Laue condition.
+    The node of the reciprocal lattice that satisfies the Laue condition is in red.
+    For simplicity, only part of the reciprocal lattice is represented.
+    (a) In-plane measurement ([h, k, l] = [0, 1, 0]), the sample is rotated in-plane by an angle $\omega$.
+    The detector must be at an in-plane angle $\gamma=2\omega$ to detect the scattered x-rays.
+    (b) Out-of-plane measurement for crystal truncation rods, the sample is rotated in-plane by an angle $\omega$ so that the (0, 1, L) CTR is measured \textit{while} keeping the incident angle at low values.
+    Here the [0, 1, 1] node is on the Ewald sphere, both detector angles must be rotated to be have the detector in the direction of the scattered x-rays.
+    Only the (0, 1, L) CTR is represented for simplicity.
+    }
+    \label{fig:EwaldSphereSpecular}
+\end{figure}
